--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
-                            <a href="" class="button-inner">
+                            <a href="#" class="button-inner">
                                 book a table
                             </a>
                         </ul>
