--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">about </a>
+                                <a class="nav-link" href="#">about </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="carsearch.html">service</a>
+                                <a class="nav-link" href="#">service</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">menu</a>
